GNOME Bugzilla – Bug 704389
display: prevent a crash if the screen being dragged is removed
Last modified: 2013-07-17 12:53:48 UTC
If a screen is removed while it is being re-arranged by the user, it will cause the display panel to crash.
Created attachment 249397 [details] [review] display: prevent a crash if the screen being dragged is removed
Review of attachment 249397 [details] [review]: Looks good, to gnome-3-8 and master please.
Attachment 249397 [details] pushed as 0a938e8 - display: prevent a crash if the screen being dragged is removed