display: prevent a crash if the screen being dragged is removed

https://bugzilla.gnome.org/show_bug.cgi?id=704389